--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -47,7 +47,7 @@
             <div class="grid-carrito">
                 <div class="resumen1">
                     <div class="resumen1-img">
-                        <img src="../assets/elena.png" alt="producto en carrito de compras, bag elena, 2 unidades $100.000">
+                        <img src="../assets/pag-productos/1-bags/1bagscards.jpg" alt="producto en carrito de compras, bag elena, 2 unidades $100.000">
                     </div>
                     <div class="resumen1-text">
                         <h6>Bag ELENA FullStack Developer</h6>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="resumen2">
                     <div class="resumen2-img">
-                        <img src="../assets/BTC.png" alt="producto en carrito de comra, billetera Susie, $35.000">
+                        <img src="../assets/pag-productos/3-billeteras/12billeterascards.jpg" alt="producto en carrito de comra, billetera Susie, $35.000">
                     </div>
                     <div class="resumen2-text">
                         <h6>Wallet Susie FullStack Developer</h6>
