--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -82,7 +82,7 @@
                             ● GUÍA DE COMPRAS
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><p>Bienvenido a nuestra Guía de Compras en Serene, donde te ayudamos a encontrar las mejores opciones para tus necesidades en accesorios y carteras. En esta sección, te ofrecemos consejos útiles y recomendaciones expertas para hacer que tu experiencia de compra sea simple y satisfactoria. Desde entender los materiales hasta elegir el estilo perfecto, estamos aquí para guiarte en cada paso del proceso.
+                            <li><p>En <strong>Serene</strong>, te ayudamos a encontrar las mejores opciones para tus necesidades en accesorios y carteras. En esta sección, te ofrecemos consejos útiles y recomendaciones expertas para hacer que tu experiencia de compra sea simple y satisfactoria. Desde entender los materiales hasta elegir el estilo perfecto, estamos aquí para guiarte en cada paso del proceso.
                                 <br><strong> ¿Qué encontrarás en nuestra Guía de Compras? </strong>
                                 <br>- Detalles Exquisitos: Analizamos cuidadosamente cada producto para proporcionarte información detallada sobre la calidad, los materiales y el diseño.
                                 <br>- Comparaciones Útiles: Comparamos diferentes estilos y características para ayudarte a tomar una decisión informada según tu estilo personal y necesidades específicas.
@@ -90,7 +90,7 @@
                                 <br>- Reseñas Confiables: Reseñas honestas y basadas en pruebas reales para que puedas tener una idea clara de lo que puedes esperar de cada artículo.
                                 <br>- Guías de Tendencias: Guías especializadas que te mantendrán al día con las últimas tendencias en moda y accesorios.
                                 <br>
-                                <br>En Serene nos comprometemos a ofrecerte una experiencia de compra excepcional. Valoramos la calidad, la elegancia y la satisfacción del cliente por encima de todo. Con nuestra Guía de Compras, queremos asegurarnos de que encuentres exactamente lo que estás buscando, ya sea que busques una cartera clásica, un bolso funcional o un accesorio que complemente tu estilo diario.
+                                <br>Nos comprometemos a ofrecerte una experiencia de compra excepcional. Valoramos la calidad, la elegancia y la satisfacción del cliente por encima de todo. Con nuestra Guía de Compras, queremos asegurarnos de que encuentres exactamente lo que estás buscando, ya sea que busques una cartera clásica, un bolso funcional o un accesorio que complemente tu estilo diario.
                                 <br>
                                 <br>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
                         </ul>
@@ -101,7 +101,7 @@
                             ● PRECIOS Y PROMOCIONES
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                            <li><p>En <strong>Serene</strong>, mantenemos nuestros precios transparentes y competitivos para que puedas disfrutar de productos de alta calidad a precios accesibles. Además, periódicamente ofrecemos promociones especiales y descuentos exclusivos para que tu experiencia de compra sea aún más satisfactoria.</p></li>
                         </ul>
                     </div>
                     <div class="dropdown">
@@ -110,7 +110,7 @@
                             ● MEDIOS DE PAGO
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                            <li><p>Aceptamos una amplia gama de métodos de pago seguros en <strong>Serene</strong>, incluyendo tarjetas de crédito y débito (Visa, Mastercard, American Express), así como opciones de pago en línea como PayPal. Esto te garantiza una compra conveniente y segura desde la comodidad de tu hogar.</p></li>
                         </ul>
                     </div>
                     <div class="dropdown">
@@ -119,7 +119,7 @@
                             ● ENVIOS Y ENTREGAS
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                            <li><p>Nos esforzamos por ofrecerte un servicio de envío rápido y confiable en <strong>Serene</strong>. Una vez realizado tu pedido, recibirás actualizaciones sobre el estado de tu envío y podrás hacer seguimiento en línea para conocer la ubicación exacta de tu paquete. Consulta nuestros tiempos de entrega estimados para tu ubicación específica.</p></li>
                         </ul>
                     </div>
                     <div class="dropdown">
@@ -128,7 +128,7 @@
                             ● CAMBIOS Y DEVOLUCIONES
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                            <li><p>En <strong>Serene</strong>, queremos que estés completamente satisfecho con tu compra. Si por alguna razón necesitas cambiar o devolver tu producto, nuestro proceso es simple y directo. Te ofrecemos opciones flexibles para asegurarnos de que encuentres la solución que mejor se adapte a tus necesidades.</p></li>
                         </ul>
                     </div>
                     <div class="dropdown">
@@ -137,7 +137,7 @@
                             ● GIFT CARDS
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                            <li><p>Las tarjetas de regalo de <strong>Serene</strong> son el regalo perfecto para cualquier ocasión. Disponibles en diferentes montos, nuestras tarjetas de regalo permiten a tus seres queridos elegir entre nuestra amplia selección de carteras y accesorios de alta calidad. Son fáciles de comprar y aún más emocionantes de recibir.</p></li>
                         </ul>
                     </div>
                     <div class="dropdown">
@@ -146,7 +146,7 @@
                             ● PRE-ORDER
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                            <li><p>¿Ansioso/a por obtener lo último en tendencias de carteras? En <strong>Serene</strong>, ofrecemos la opción de pre-ordenar productos populares antes de que estén disponibles en stock. Esto te asegura ser uno de los primeros en recibir los artículos más nuevos y exclusivos que tenemos para ofrecer.</p></li>
                         </ul>
                     </div>
                     <div class="dropdown">
@@ -155,7 +155,7 @@
                             ● CONTACTO
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><p>Explora nuestras recomendaciones y descubre por qué nuestros clientes confían en nosotros para encontrar los accesorios perfectos que complementan su vida cotidiana con elegancia y estilo.</p></li>
+                            <li><p>Nuestro equipo de atención al cliente en Serene está aquí para ayudarte en cada paso del camino. Si tienes alguna pregunta, comentario o necesitas asistencia adicional, no dudes en ponerte en contacto con nosotros a través de nuestros canales de comunicación. Estamos aquí para garantizar que tu experiencia con Serene sea excepcional.</p></li>
                         </ul>
                     </div>
                 </div>
