--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -10,12 +10,8 @@
     <meta name="robots" content="no-index, follow">
     <title>Accesorios - Comprá en 6 cuotas sin interés - Serene</title>
     <link rel="shortcut icon" href="../assets/S-ico.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Bootstrap JS (jQuery required) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-Z3oxpYHjAzUcJjSFvkGYDWcHs70Z/nF4JCw9IRBvux9Z5SQ83YZtJyp1ZmL1oTl6" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+ewz6aYEJ5kI6+kzVJkzQ5m1zI6RTkmJKzU" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="container-fluid">
@@ -68,10 +64,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/4-accesorios/1accesorioscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">SUNRISE</h5>
+                            <p class="card-text">Cadenita bañada en oro con dije de sol y perla de plata.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -79,10 +74,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/4-accesorios/2accesorioscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">Aritos Isabella</h5>
+                            <p class="card-text">De oro con mini-perlas y moño dorado.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -90,10 +84,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/4-accesorios/3accesorioscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">GARDEN</h5>
+                            <p class="card-text">Aritos de oro con pétalos de perlas y piedra grande.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -101,10 +94,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/4-accesorios/4accesorioscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">UNIVERSE</h5>
+                            <p class="card-text">Aritos colgantes bañados en oro con anillos dorados.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -112,10 +104,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/4-accesorios/5accesorioscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">AURORA</h5>
+                            <p class="card-text">Anillo de oro en forma de trenza eterna.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -123,10 +114,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/4-accesorios/6accesorioscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">ELENA</h5>
+                            <p class="card-text">Argollas bañadas en oro y recubiertas en mini perlas.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -134,10 +124,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/4-accesorios/7accesorioscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">ESMERALDA</h5>
+                            <p class="card-text">Cadenita de oro con dije de esmeralda.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -145,10 +134,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/4-accesorios/8accesorioscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">KEYHEART</h5>
+                            <p class="card-text">Cadenita bañada en oro con romantica llave.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -156,10 +144,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/4-accesorios/9accesorioscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">BIANCA</h5>
+                            <p class="card-text">Cadenita extra-fina de oro con dije de Cuarzo blanco.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -167,10 +154,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/4-accesorios/10accesorioscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">ZAFIRA</h5>
+                            <p class="card-text">Anillo de oro con forma de corazones entrelazados.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -178,10 +164,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/4-accesorios/11accesorioscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">SATURNO</h5>
+                            <p class="card-text">Cadenita fina bañada en oro con dije de piedra de Saturno.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -189,10 +174,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/4-accesorios/12accesorioscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">CHAIN</h5>
+                            <p class="card-text">Anillo encadenado, de oro puro de 18 kilates.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -226,5 +210,12 @@
         </div>
     </footer>
     <aside></aside>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </body>
 </html>
