--- a/pages/bags.html
+++ b/pages/bags.html
@@ -10,12 +10,8 @@
     <meta name="robots" content="index, follow">
     <title>Carteras - Comprá en 6 cuotas sin interés - Serene</title>
     <link rel="shortcut icon" href="../assets/S-ico.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Bootstrap JS (jQuery required) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-Z3oxpYHjAzUcJjSFvkGYDWcHs70Z/nF4JCw9IRBvux9Z5SQ83YZtJyp1ZmL1oTl6" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+ewz6aYEJ5kI6+kzVJkzQ5m1zI6RTkmJKzU" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="container-fluid">
@@ -68,10 +64,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/1-bags/1bagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">CLASSIC BLACK</h5>
+                            <p class="card-text">Bandolera rígida de eco-cuero negro con correa.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -79,10 +74,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/1-bags/2bagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">BOLSO COCO</h5>
+                            <p class="card-text">Bolso de eco-cuero con piel de cocodrilo.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -90,10 +84,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/1-bags/3bagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">ROSY</h5>
+                            <p class="card-text">Bandolera rígida con broche imantado.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -101,10 +94,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/1-bags/4bagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">DANA</h5>
+                            <p class="card-text">Bandolera rígida con correa desmontable y pañuelo.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -112,10 +104,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/1-bags/5bagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">SUSAN</h5>
+                            <p class="card-text">Cartera de eco-cuero marron con broche dorado.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -123,10 +114,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/1-bags/6bagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">BOLSO MORGAN</h5>
+                            <p class="card-text">Bolso de tela texturada, amplio y con cierre simple.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -134,10 +124,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/1-bags/7bagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">LIGHT MARGARET</h5>
+                            <p class="card-text">Bolso de tela con cadenas doradas y cierre de broche.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -145,10 +134,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/1-bags/8bagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">MILUSKA</h5>
+                            <p class="card-text">Bandolera negra con broche dorado y patron calado.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -156,10 +144,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/1-bags/9bagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">ALEXIA</h5>
+                            <p class="card-text">Bandolera rígida naranja con cierre imantado.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -167,10 +154,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/1-bags/10bagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">BLAIR</h5>
+                            <p class="card-text">Bandolera rígida negra con apertura lateral.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -178,10 +164,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/1-bags/11bagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">DARK MARGARET</h5>
+                            <p class="card-text">Bolso de tela con cadenas doradas y cierre de broche.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -189,10 +174,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/1-bags/12bagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">MANHATTAN</h5>
+                            <p class="card-text">Bag bandolera rígida, con cadena dorada.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -224,5 +208,12 @@
         </div>
     </footer>
     <aside></aside>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </body>
 </html>
