--- a/pages/minibags.html
+++ b/pages/minibags.html
@@ -10,12 +10,8 @@
     <meta name="robots" content="index, follow">
     <title>Minibags - Comprá en 6 cuotas sin interés - Serene</title>
     <link rel="shortcut icon" href="../assets/S-ico.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Bootstrap JS (jQuery required) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-Z3oxpYHjAzUcJjSFvkGYDWcHs70Z/nF4JCw9IRBvux9Z5SQ83YZtJyp1ZmL1oTl6" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+ewz6aYEJ5kI6+kzVJkzQ5m1zI6RTkmJKzU" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header class="container-fluid">
@@ -68,10 +64,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/2-minibags/1minibagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">STAR</h5>
+                            <p class="card-text">Minibag rígida de ecocuero, con detalles en dorado.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -79,10 +74,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/2-minibags/2minibagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">COQUETTE</h5>
+                            <p class="card-text">Minibag femenina y delicada, con accesorio de pañuelo.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -90,10 +84,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/2-minibags/3minibagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">WANDA</h5>
+                            <p class="card-text">Minibag rígida con mango anudado y acolchado.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -101,10 +94,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/2-minibags/4minibagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">BLACK PATTERN</h5>
+                            <p class="card-text">Rígida, correa desmontable y mango anudado.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -112,10 +104,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/2-minibags/5minibagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">RUBY</h5>
+                            <p class="card-text">Minibag elegante, rígida, con cadena bicolor.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -123,10 +114,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/2-minibags/6minibagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">CAMILL</h5>
+                            <p class="card-text">Minibag efecto acolchado y correa desmontable.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -134,10 +124,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/2-minibags/7minibagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">BARBIE</h5>
+                            <p class="card-text">Es única. Fina como barbie, bella como ella.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -145,10 +134,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/2-minibags/8minibagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">TREBOL</h5>
+                            <p class="card-text">Minibag blanca con broche fake trebol.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -156,10 +144,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/2-minibags/9minibagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">WAVES</h5>
+                            <p class="card-text">Minibags de tela brillante, con textura rugosa.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -167,10 +154,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/2-minibags/10minibagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">CELESTE</h5>
+                            <p class="card-text">Minibag simple, con sensacion de nube.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -178,10 +164,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/2-minibags/11minibagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">MAGGIE</h5>
+                            <p class="card-text">Minibag fucsia, te acompaña a donde vayas.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -189,10 +174,9 @@
                     <div class="card text-center">
                         <img src="../assets/pag-productos/2-minibags/12minibagscards.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Billetera BTC</h5>
-                            <p class="card-text">Texto de ejemplo para la card. Puedes agregar aquí la información que desees
-                                mostrar.</p>
-                            <a href="#" class="btn btn-primary">Botón</a>
+                            <h5 class="card-title">KENDAL</h5>
+                            <p class="card-text">Minibag de eco-cuero negro con broches de metal.</p>
+                            <a href="#" class="btn btn-dark">Agregar al carrito</a>
                         </div>
                     </div>
                 </div>
@@ -224,5 +208,12 @@
         </div>
     </footer>
     <aside></aside>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </body>
 </html>
