--- a/pages/política-de-privacidad.html
+++ b/pages/política-de-privacidad.html
@@ -9,34 +9,49 @@
     <meta name="robots" content="no-index, follow">
     <title>Políticas de privacidad - Serene</title>
     <link rel="shortcut icon" href="../assets/S-ico.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
-        <div class="item1-logoserene">
-            <a href="../index.html"><img src="../assets/Serene_index.png" alt=""></a>
-        </div>
-        <div class="item2-nav">
-            <nav>
-                <ul>
-                    <li><a href="bags.html">Bags</a></li>
-                    <li><a href="minibags.html">MiniBags</a></li>
-                    <li><a href="billeteras.html">Billeteras</a></li>
-                    <li><a href="accesorios.html">Accesorios</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div class="item3-login">
-            <div class="login">
-                <a href="">login | sign up</a>
-                <a1 href=""><img src="../assets/login.png" alt=""></a>
+    <header class="container-fluid" class="header-BS">
+        <div class="row align-items-center">
+            <div class="col-md-5 order-md-2">
+                <a href="../index.html"><img src="../assets/Serene_index.png" alt=""></a>
             </div>
-        </div>
-        <div class="item4-search">
-            <div class="carrito-search">
-                <a href=""><img src="../assets/lupa.png" alt=""></a>
-                <a href=""><img src="../assets/heart.png" alt=""></a>
-                <a href="carrito.html"><img src="../assets/carrito-de-compras.png" alt=""></a>
+            <div class="col-md-5 order-md-1">
+                <nav class="navbar navbar-expand-md navbar-light">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="bags.html">Bags</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="minibags.html">MiniBags</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="billeteras.html">Billeteras</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="accesorios.html">Accesorios</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+            <div class="col-md-2 order-md-3 block3header">
+                <div class="login">
+                    <a href="">sign up</a>
+                    <a href="">| login<img src="../assets/login.png" alt="item sign up | login"></a>
+                </div>
+                <div class="carrito-search">
+                    <a href=""><img src="../assets/lupa.png" alt="item buscador"></a>
+                    <a href=""><img src="../assets/heart.png" alt="item elementos gustados"></a>
+                    <a href="../pages/carrito.html"><img src="../assets/carrito-de-compras.png" alt="item carrito de compras"></a>
+                </div>
             </div>
         </div>
     </header>
@@ -65,5 +80,11 @@
             <a href="https://wa.me/message/2P4EKK3AUTOHF1" target="_blank"><img src="../assets/WPP.png" alt="item WhatsApp - contacto: +54 3754451241"></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
 </body>
 </html>
